--- a/company-profile/css/style.css
+++ b/company-profile/css/style.css
@@ -97,11 +97,116 @@ section h3{
     text-align: center;
     padding: 20px 0;
     color:#148f77;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+}
+
+.about,
+.service{
+    padding-bottom:50px;
 }
 
 .about p{
     color: #666;
     word-spacing: 2px;
     line-height: 25px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.service {
+    background-color: #f9f9f9;
+}
+
+.box{
+    color: #148f77;
+}
+
+.box:after{
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.box .col-4{
+    width: 25%;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    float: left;
+}
+
+.icon{
+    width: 70px;
+    height: 70px;
+    border: 1px solid;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 70px;
+    font-size: 20px;
+    margin: 0 auto;
+}
+
+.box .col-4 h4{
+    margin: 20px 0;
+}
+
+footer{
+    padding: 30px 0;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+}
+
+.bg-loader {
+    background-color: #eee;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bg-loader .loader{
+    width: 100px;
+    height: 100px;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    border-top-color: #148f77;
+    border-right-color: #148f77;
+    border-bottom-color: #148f77;
+    animation: puterin .8s linear infinite;
+}
+
+.label{
+    background-color: #148f77;
+    color: #fff;
+}
+
+@keyframes puterin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@media screen and (max-width: 768px){
+    .container{
+        width: 90%;
+    }
+    header h1 {
+        text-align: center;
+        float: none;
+    }
+    header ul{
+        text-align: center;
+        float: none;
+    }
+    .box .col-4 {
+        width: 100%;
+        float: none;
+        margin-bottom: 20px;
+    }
 }
